@@ -261,8 +261,11 @@ public abstract class AbstractBlobStoreIT {
     multipartUploadFailed = false;
     try {
       MultipartUpload mpu =
-          MultipartUpload.builder().bucket(bucketClient.getBucket()).key(key + "multipart2")
-              .id("multipart2").build();
+          MultipartUpload.builder()
+              .bucket(bucketClient.getBucket())
+              .key(key + "multipart2")
+              .id("multipart2")
+              .build();
       MultipartPart multipartPart = new MultipartPart(1, utf8BlobBytes);
       bucketClient.uploadMultipartPart(mpu, multipartPart);
     } catch (Throwable t) {
@@ -274,8 +277,11 @@ public abstract class AbstractBlobStoreIT {
     multipartUploadFailed = false;
     try {
       MultipartUpload request =
-          MultipartUpload.builder().bucket(bucketClient.getBucket()).key(key + "multipart3")
-              .id("multipart3").build();
+          MultipartUpload.builder()
+              .bucket(bucketClient.getBucket())
+              .key(key + "multipart3")
+              .id("multipart3")
+              .build();
       List<UploadPartResponse> listOfParts =
           List.of(new UploadPartResponse(1, "etag", utf8BlobBytes.length));
       bucketClient.completeMultipartUpload(request, listOfParts);
@@ -288,8 +294,11 @@ public abstract class AbstractBlobStoreIT {
     multipartUploadFailed = false;
     try {
       MultipartUpload request =
-          MultipartUpload.builder().bucket(bucketClient.getBucket()).key(key + "multipart4")
-              .id("multipart4").build();
+          MultipartUpload.builder()
+              .bucket(bucketClient.getBucket())
+              .key(key + "multipart4")
+              .id("multipart4")
+              .build();
       bucketClient.listMultipartUpload(request);
     } catch (Throwable t) {
       multipartUploadFailed = true;
@@ -300,8 +309,11 @@ public abstract class AbstractBlobStoreIT {
     multipartUploadFailed = false;
     try {
       MultipartUpload request =
-          MultipartUpload.builder().bucket(bucketClient.getBucket()).key(key + "multipart5")
-              .id("multipart5").build();
+          MultipartUpload.builder()
+              .bucket(bucketClient.getBucket())
+              .key(key + "multipart5")
+              .id("multipart5")
+              .build();
       bucketClient.abortMultipartUpload(request);
     } catch (Throwable t) {
       multipartUploadFailed = true;
@@ -333,18 +345,27 @@ public abstract class AbstractBlobStoreIT {
     String key = "conformance-tests/blob-for-not-failing/" + testName;
 
     PresignedUrlRequest presignedUploadRequest =
-        PresignedUrlRequest.builder().type(PresignedOperation.UPLOAD).key(key)
-            .duration(Duration.ofHours(24)).build();
+        PresignedUrlRequest.builder()
+            .type(PresignedOperation.UPLOAD)
+            .key(key)
+            .duration(Duration.ofHours(24))
+            .build();
     bucketClient.generatePresignedUrl(presignedUploadRequest);
 
     PresignedUrlRequest presignedDownloadRequest =
-        PresignedUrlRequest.builder().type(PresignedOperation.DOWNLOAD).key(key)
-            .duration(Duration.ofHours(24)).build();
+        PresignedUrlRequest.builder()
+            .type(PresignedOperation.DOWNLOAD)
+            .key(key)
+            .duration(Duration.ofHours(24))
+            .build();
     bucketClient.generatePresignedUrl(presignedDownloadRequest);
   }
 
   enum UploadType {
-    InputStream, ByteArray, File, Path;
+    InputStream,
+    ByteArray,
+    File,
+    Path;
   }
 
   @Test
@@ -360,15 +381,18 @@ public abstract class AbstractBlobStoreIT {
   @Test
   public void testUpload_emptyContent() {
     Assumptions.assumeFalse(GCP_PROVIDER_ID.equals(harness.getProviderId()));
-    runUploadTests("testUpload_emptyContent", "conformance-tests/upload/emptyContent",
-        new byte[] {}, false);
+    runUploadTests(
+        "testUpload_emptyContent", "conformance-tests/upload/emptyContent", new byte[] {}, false);
   }
 
   @Test
   public void testUpload_happyPath() {
     Assumptions.assumeFalse(GCP_PROVIDER_ID.equals(harness.getProviderId()));
-    runUploadTests("testUpload_happyPath", "conformance-tests/upload/happyPath",
-        "This is test data".getBytes(), false);
+    runUploadTests(
+        "testUpload_happyPath",
+        "conformance-tests/upload/happyPath",
+        "This is test data".getBytes(),
+        false);
   }
 
   private void runUploadTests(String testName, String key, byte[] content, boolean wantError) {
@@ -382,8 +406,13 @@ public abstract class AbstractBlobStoreIT {
     runUploadTest(testName, true, UploadType.Path, key, content, wantError);
   }
 
-  private void runUploadTest(String testName, boolean useVersionedBucket, UploadType uploadType,
-                             String key, byte[] content, boolean wantError) {
+  private void runUploadTest(
+      String testName,
+      boolean useVersionedBucket,
+      UploadType uploadType,
+      String key,
+      byte[] content,
+      boolean wantError) {
 
     String suffix = "_" + (useVersionedBucket ? "versioned_" : "") + uploadType;
     testName += suffix;
@@ -440,10 +469,12 @@ public abstract class AbstractBlobStoreIT {
         readFailed = true;
       }
       if (!readFailed) {
-        Assertions.assertEquals(content.length, outputStream.toByteArray().length,
+        Assertions.assertEquals(
+            content.length,
+            outputStream.toByteArray().length,
             testName + ": Content-Length did not match");
-        Assertions.assertArrayEquals(content, outputStream.toByteArray(),
-            testName + ": Bytes arrays did not match");
+        Assertions.assertArrayEquals(
+            content, outputStream.toByteArray(), testName + ": Bytes arrays did not match");
       }
     } finally {
       // Now delete the blob that was created
@@ -452,7 +483,10 @@ public abstract class AbstractBlobStoreIT {
   }
 
   enum DownloadType {
-    InputStream, ByteArray, File, Path;
+    InputStream,
+    ByteArray,
+    File,
+    Path;
   }
 
   @Test
@@ -467,27 +501,39 @@ public abstract class AbstractBlobStoreIT {
 
   @Test
   public void testDownload_happy() throws IOException {
-    runDownloadTests("happy path read", "conformance-tests/download_happy",
-        "conformance-tests/download_happy", false);
+    runDownloadTests(
+        "happy path read",
+        "conformance-tests/download_happy",
+        "conformance-tests/download_happy",
+        false);
   }
 
   @Test
   public void testVersionedDownload_happy() throws IOException {
-    runVersionedDownloadTests("happy versioned download",
-        "conformance-tests/versioned_download_happy", "conformance-tests/versioned_download_happy",
-        true, true, false);
+    runVersionedDownloadTests(
+        "happy versioned download",
+        "conformance-tests/versioned_download_happy",
+        "conformance-tests/versioned_download_happy",
+        true,
+        true,
+        false);
   }
 
   @Test
   public void testVersionedDownload_noVersionId() throws IOException {
-    runVersionedDownloadTests("no versionId download",
+    runVersionedDownloadTests(
+        "no versionId download",
         "conformance-tests/versioned_download_no_versionId",
-        "conformance-tests/versioned_download_no_versionId", false, false, false);
+        "conformance-tests/versioned_download_no_versionId",
+        false,
+        false,
+        false);
   }
 
   @Test
   public void testVersionedDownload_badVersionId() throws IOException {
-    runVersionedDownloadTests("bad versionId download",
+    runVersionedDownloadTests(
+        "bad versionId download",
         "conformance-tests/versioned_download_bad_versionId",
         "conformance-tests/versioned_download_bad_versionId",
         true,
@@ -496,16 +542,44 @@ public abstract class AbstractBlobStoreIT {
   }
 
   // Helper function for executing tests against both versions and unversioned buckets
-  private void runDownloadTests(String testName, String uploadKey, String downloadKey,
-                                boolean wantError) throws IOException {
-    runDownloadTest(testName, uploadKey + "_unversioned", downloadKey + "_unversioned", false,
-        DownloadType.InputStream, true, true, wantError);
-    runDownloadTest(testName, uploadKey + "_unversioned", downloadKey + "_unversioned", false,
-        DownloadType.ByteArray, true, true, wantError);
-    runDownloadTest(testName, uploadKey + "_unversioned", downloadKey + "_unversioned", false,
-        DownloadType.File, true, true, wantError);
-    runDownloadTest(testName, uploadKey + "_unversioned", downloadKey + "_unversioned", false,
-        DownloadType.Path, true, true, wantError);
+  private void runDownloadTests(
+      String testName, String uploadKey, String downloadKey, boolean wantError) throws IOException {
+    runDownloadTest(
+        testName,
+        uploadKey + "_unversioned",
+        downloadKey + "_unversioned",
+        false,
+        DownloadType.InputStream,
+        true,
+        true,
+        wantError);
+    runDownloadTest(
+        testName,
+        uploadKey + "_unversioned",
+        downloadKey + "_unversioned",
+        false,
+        DownloadType.ByteArray,
+        true,
+        true,
+        wantError);
+    runDownloadTest(
+        testName,
+        uploadKey + "_unversioned",
+        downloadKey + "_unversioned",
+        false,
+        DownloadType.File,
+        true,
+        true,
+        wantError);
+    runDownloadTest(
+        testName,
+        uploadKey + "_unversioned",
+        downloadKey + "_unversioned",
+        false,
+        DownloadType.Path,
+        true,
+        true,
+        wantError);
     runVersionedDownloadTests(testName, uploadKey, downloadKey, true, true, wantError);
   }
 
@@ -562,8 +636,9 @@ public abstract class AbstractBlobStoreIT {
       String downloadKey,
       boolean useVersionedBucket,
       DownloadType downloadType,
-                                         boolean downloadUsingVersionId,
-                                         boolean useCorrectVersionId, boolean wantError)
+      boolean downloadUsingVersionId,
+      boolean useCorrectVersionId,
+      boolean wantError)
       throws IOException {
     // Test data
     String blobData = "This is test data";
@@ -577,7 +652,9 @@ public abstract class AbstractBlobStoreIT {
     UploadResponse uploadResponse;
     try (InputStream inputStream = new ByteArrayInputStream(blobBytes)) {
       UploadRequest request =
-          new UploadRequest.Builder().withKey(uploadKey).withContentLength(blobBytes.length)
+          new UploadRequest.Builder()
+              .withKey(uploadKey)
+              .withContentLength(blobBytes.length)
               .build();
       uploadResponse = bucketClient.upload(request, inputStream);
 
@@ -585,8 +662,8 @@ public abstract class AbstractBlobStoreIT {
       Assertions.assertNotNull(uploadResponse.getKey(), testName + ": key was missing");
       Assertions.assertNotNull(uploadResponse.getETag(), testName + ": etag was missing");
       if (useVersionedBucket) {
-        Assertions.assertNotNull(uploadResponse.getVersionId(),
-            testName + ": versionId was missing");
+        Assertions.assertNotNull(
+            uploadResponse.getVersionId(), testName + ": versionId was missing");
       }
     }
 
@@ -604,8 +681,8 @@ public abstract class AbstractBlobStoreIT {
         Pair<DownloadResponse, byte[]> result = readContent(bucketClient, request, downloadType);
         response = result.getLeft();
         content = result.getRight();
-        Assertions.assertEquals(blobBytes.length, content.length,
-            testName + ": Content-Length did not match");
+        Assertions.assertEquals(
+            blobBytes.length, content.length, testName + ": Content-Length did not match");
         Assertions.assertArrayEquals(blobBytes, content, testName + ": Bytes arrays did not match");
       } catch (SubstrateSdkException e) {
         Assertions.assertTrue(wantError, testName + ": Did not expect error. " + e.getMessage());
@@ -613,15 +690,19 @@ public abstract class AbstractBlobStoreIT {
       }
       Assertions.assertFalse(wantError);
       Assertions.assertEquals(downloadKey, response.getKey(), testName + ": key did not match");
-      Assertions.assertEquals(downloadKey, response.getMetadata().getKey(),
-          testName + ": metadata key did not match");
-      Assertions.assertEquals(blobBytes.length, response.getMetadata().getObjectSize(),
+      Assertions.assertEquals(
+          downloadKey, response.getMetadata().getKey(), testName + ": metadata key did not match");
+      Assertions.assertEquals(
+          blobBytes.length,
+          response.getMetadata().getObjectSize(),
           testName + ": objectSize did not match");
-      Assertions.assertEquals(uploadResponse.getVersionId(), response.getMetadata().getVersionId(),
+      Assertions.assertEquals(
+          uploadResponse.getVersionId(),
+          response.getMetadata().getVersionId(),
           testName + ": versionId did not match");
       Assertions.assertNotNull(response.getMetadata().getETag(), testName + ": etag was missing");
-      Assertions.assertNotNull(response.getMetadata().getLastModified(),
-          testName + ": lastModified was missing");
+      Assertions.assertNotNull(
+          response.getMetadata().getLastModified(), testName + ": lastModified was missing");
     } finally {
       // Delete our blob to clean up the test
       safeDeleteBlobs(bucketClient, uploadKey);
@@ -641,8 +722,8 @@ public abstract class AbstractBlobStoreIT {
     runRangedReadDownloadTest(key + "_versioned", true, DownloadType.Path);
   }
 
-  private void runRangedReadDownloadTest(String key, boolean useVersionedBucket,
-                                         DownloadType downloadType) throws IOException {
+  private void runRangedReadDownloadTest(
+      String key, boolean useVersionedBucket, DownloadType downloadType) throws IOException {
 
     String blobData = "This is test data for the ranged read test file";
     byte[] blobBytes = blobData.getBytes();
@@ -697,7 +778,9 @@ public abstract class AbstractBlobStoreIT {
 
       // Ask for bytes out of range (0 to length+10). This exceeds the total size, but still works
       result =
-          readContent(bucketClient, requestBuilder.withRange(0L, blobBytes.length + 10L).build(),
+          readContent(
+              bucketClient,
+              requestBuilder.withRange(0L, blobBytes.length + 10L).build(),
               downloadType);
       content = result.getRight();
       Assertions.assertEquals(blobBytes.length, content.length);
@@ -705,7 +788,9 @@ public abstract class AbstractBlobStoreIT {
 
       // Ask for the last length+10 bytes. This exceeds the total size, but still works
       result =
-          readContent(bucketClient, requestBuilder.withRange(null, blobBytes.length + 10L).build(),
+          readContent(
+              bucketClient,
+              requestBuilder.withRange(null, blobBytes.length + 10L).build(),
               downloadType);
       content = result.getRight();
       Assertions.assertEquals(blobBytes.length, content.length);
@@ -714,7 +799,9 @@ public abstract class AbstractBlobStoreIT {
       // Ask for everything but the first length+10 bytes (this should fail)
       boolean hasError = false;
       try {
-        readContent(bucketClient, requestBuilder.withRange(blobBytes.length + 10L, null).build(),
+        readContent(
+            bucketClient,
+            requestBuilder.withRange(blobBytes.length + 10L, null).build(),
             downloadType);
       } catch (SubstrateSdkException e) {
         hasError = true;
@@ -727,9 +814,9 @@ public abstract class AbstractBlobStoreIT {
   }
 
   /** Helper function for downloading content using the overloaded download() types */
-  private Pair<DownloadResponse, byte[]> readContent(BucketClient bucketClient,
-                                                     DownloadRequest request,
-                                                     DownloadType downloadType) throws IOException {
+  private Pair<DownloadResponse, byte[]> readContent(
+      BucketClient bucketClient, DownloadRequest request, DownloadType downloadType)
+      throws IOException {
     byte[] content = null;
     DownloadResponse response = null;
     switch (downloadType) {
@@ -737,7 +824,7 @@ public abstract class AbstractBlobStoreIT {
         response = bucketClient.download(request);
         if (response.getInputStream() != null) {
           try (InputStream inputStream = response.getInputStream();
-               ByteArrayOutputStream outputStream = new ByteArrayOutputStream()) {
+              ByteArrayOutputStream outputStream = new ByteArrayOutputStream()) {
             byte[] buffer = new byte[1024];
             int bytesRead;
             while ((bytesRead = inputStream.read(buffer)) != -1) {
@@ -831,8 +918,11 @@ public abstract class AbstractBlobStoreIT {
       final Collection<String> keysToDelete;
       final boolean wantError;
 
-      public TestConfig(String testName, Collection<String> keysToCreate,
-                        Collection<String> keysToDelete, boolean wantError) {
+      public TestConfig(
+          String testName,
+          Collection<String> keysToCreate,
+          Collection<String> keysToDelete,
+          boolean wantError) {
         this.testName = testName;
         this.keysToCreate = keysToCreate;
         this.keysToDelete = keysToDelete;
@@ -849,18 +939,33 @@ public abstract class AbstractBlobStoreIT {
     BucketClient bucketClient = new BucketClient(blobStore);
 
     // Prepare the tests
-    List<TestConfig> testConfigs = Arrays.asList(
-        new TestConfig("empty collection", new ArrayList<>(), new ArrayList<>(), true),
-        new TestConfig("delete non-existing blob", new ArrayList<>(),
-            List.of(keyPrefix + "nonexisting"), false), new TestConfig("happy path",
-            List.of(keyPrefix + "happy1", keyPrefix + "happy2", keyPrefix + "happy3"),
-            List.of(keyPrefix + "happy1", keyPrefix + "happy2", keyPrefix + "happy3"), false),
-        new TestConfig("happy path with nonexisting",
-            List.of(keyPrefix + "happy4", keyPrefix + "happy5", keyPrefix + "happy6"),
-            List.of(keyPrefix + "happy4", keyPrefix + "happy5", keyPrefix + "happy6",
-                keyPrefix + "nonexisting2"), false),
-        new TestConfig("duplicate deletion", List.of(keyPrefix + "happy7", keyPrefix + "happy8"),
-            List.of(keyPrefix + "happy7", keyPrefix + "happy7", keyPrefix + "happy8"), false));
+    List<TestConfig> testConfigs =
+        Arrays.asList(
+            new TestConfig("empty collection", new ArrayList<>(), new ArrayList<>(), true),
+            new TestConfig(
+                "delete non-existing blob",
+                new ArrayList<>(),
+                List.of(keyPrefix + "nonexisting"),
+                false),
+            new TestConfig(
+                "happy path",
+                List.of(keyPrefix + "happy1", keyPrefix + "happy2", keyPrefix + "happy3"),
+                List.of(keyPrefix + "happy1", keyPrefix + "happy2", keyPrefix + "happy3"),
+                false),
+            new TestConfig(
+                "happy path with nonexisting",
+                List.of(keyPrefix + "happy4", keyPrefix + "happy5", keyPrefix + "happy6"),
+                List.of(
+                    keyPrefix + "happy4",
+                    keyPrefix + "happy5",
+                    keyPrefix + "happy6",
+                    keyPrefix + "nonexisting2"),
+                false),
+            new TestConfig(
+                "duplicate deletion",
+                List.of(keyPrefix + "happy7", keyPrefix + "happy8"),
+                List.of(keyPrefix + "happy7", keyPrefix + "happy7", keyPrefix + "happy8"),
+                false));
 
     // Now run the tests
     try {
@@ -875,7 +980,9 @@ public abstract class AbstractBlobStoreIT {
               ("Bulk delete blob for " + keyToCreate).getBytes(StandardCharsets.UTF_8);
           try (InputStream inputStream = new ByteArrayInputStream(blobBytes)) {
             UploadRequest request =
-                new UploadRequest.Builder().withKey(keyToCreate).withContentLength(blobBytes.length)
+                new UploadRequest.Builder()
+                    .withKey(keyToCreate)
+                    .withContentLength(blobBytes.length)
                     .build();
             bucketClient.upload(request, inputStream);
           } catch (Throwable t) {
@@ -888,7 +995,8 @@ public abstract class AbstractBlobStoreIT {
 
         // Now delete the requested blobs
         List<BlobIdentifier> objectsToDelete =
-            testConfig.keysToDelete.stream().map(key -> new BlobIdentifier(key, null))
+            testConfig.keysToDelete.stream()
+                .map(key -> new BlobIdentifier(key, null))
                 .collect(Collectors.toList());
         boolean failed = false;
         try {
@@ -897,12 +1005,14 @@ public abstract class AbstractBlobStoreIT {
 
           // If we expected an error, validate that here
           failed = true;
-          Assertions.assertTrue(testConfig.wantError,
-              testConfig.testName + ": Unexpected error " + t.getMessage());
+          Assertions.assertTrue(
+              testConfig.wantError, testConfig.testName + ": Unexpected error " + t.getMessage());
         }
 
         // Verify we got the expected error state
-        Assertions.assertEquals(testConfig.wantError, failed,
+        Assertions.assertEquals(
+            testConfig.wantError,
+            failed,
             testConfig.testName + ": Did not generate expected error state");
         if (failed) {
           continue;
@@ -913,8 +1023,8 @@ public abstract class AbstractBlobStoreIT {
 
           // Try reading the blob (which shouldn't work because it's deleted)
           try (ByteArrayOutputStream outputStream = new ByteArrayOutputStream()) {
-            bucketClient.download(new DownloadRequest.Builder().withKey(keyToDelete).build(),
-                outputStream);
+            bucketClient.download(
+                new DownloadRequest.Builder().withKey(keyToDelete).build(), outputStream);
           } catch (Throwable t) {
             continue;
           }
@@ -958,7 +1068,7 @@ public abstract class AbstractBlobStoreIT {
       UploadResponse uploadResponse1;
       UploadResponse uploadResponse2;
       try (InputStream inputStream1 = new ByteArrayInputStream(blobBytes1);
-           InputStream inputStream2 = new ByteArrayInputStream(blobBytes2)) {
+          InputStream inputStream2 = new ByteArrayInputStream(blobBytes2)) {
         UploadRequest request1 =
             new UploadRequest.Builder().withKey(key).withContentLength(blobBytes1.length).build();
         uploadResponse1 = bucketClient.upload(request1, inputStream1);
@@ -974,8 +1084,11 @@ public abstract class AbstractBlobStoreIT {
       boolean readFailed = false;
       try (ByteArrayOutputStream outputStream = new ByteArrayOutputStream()) {
         bucketClient.download(
-            new DownloadRequest.Builder().withKey(key).withVersionId(uploadResponse1.getVersionId())
-                .build(), outputStream);
+            new DownloadRequest.Builder()
+                .withKey(key)
+                .withVersionId(uploadResponse1.getVersionId())
+                .build(),
+            outputStream);
       } catch (Throwable t) {
         readFailed = true;
       }
@@ -984,16 +1097,24 @@ public abstract class AbstractBlobStoreIT {
 
       // Download the second blob (the most recent version) to verify it's still downloadable
       ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
-      DownloadResponse downloadResponse = bucketClient.download(
-          new DownloadRequest.Builder().withKey(key).withVersionId(uploadResponse2.getVersionId())
-              .build(), outputStream);
+      DownloadResponse downloadResponse =
+          bucketClient.download(
+              new DownloadRequest.Builder()
+                  .withKey(key)
+                  .withVersionId(uploadResponse2.getVersionId())
+                  .build(),
+              outputStream);
       Assertions.assertEquals(key, downloadResponse.getKey(), "Key should have matched");
-      Assertions.assertEquals(uploadResponse2.getVersionId(),
-          downloadResponse.getMetadata().getVersionId(), "VersionId should have matched");
-      Assertions.assertEquals(blobBytes2.length, downloadResponse.getMetadata().getObjectSize(),
+      Assertions.assertEquals(
+          uploadResponse2.getVersionId(),
+          downloadResponse.getMetadata().getVersionId(),
+          "VersionId should have matched");
+      Assertions.assertEquals(
+          blobBytes2.length,
+          downloadResponse.getMetadata().getObjectSize(),
           "Object size should have matched");
-      Assertions.assertEquals(blobBytes2.length, outputStream.size(),
-          "Object size should have matched");
+      Assertions.assertEquals(
+          blobBytes2.length, outputStream.size(), "Object size should have matched");
 
       // Delete the second version of the blob now. This will leave no versions left
       bucketClient.delete(key, uploadResponse2.getVersionId());
@@ -1010,38 +1131,52 @@ public abstract class AbstractBlobStoreIT {
 
   @Test
   public void testBulkVersionedDelete_emptyCollection() throws IOException {
-    runBulkVersionedDeleteTest("testBulkVersionedDelete_emptyCollection", new ArrayList<>(),
-        new ArrayList<>(), true);
+    runBulkVersionedDeleteTest(
+        "testBulkVersionedDelete_emptyCollection", new ArrayList<>(), new ArrayList<>(), true);
   }
 
   @Test
   public void testBulkVersionedDelete_nonExistingBlob() throws IOException {
-    runBulkVersionedDeleteTest("testBulkVersionedDelete_nonExistingBlob", new ArrayList<>(),
-        List.of("nonexisting"), false);
+    runBulkVersionedDeleteTest(
+        "testBulkVersionedDelete_nonExistingBlob",
+        new ArrayList<>(),
+        List.of("nonexisting"),
+        false);
   }
 
   @Test
   public void testBulkVersionedDelete_happyPath() throws IOException {
-    runBulkVersionedDeleteTest("testBulkVersionedDelete_happyPath",
-        List.of("happy1", "happy2", "happy3"), List.of("happy1", "happy2", "happy3"), false);
+    runBulkVersionedDeleteTest(
+        "testBulkVersionedDelete_happyPath",
+        List.of("happy1", "happy2", "happy3"),
+        List.of("happy1", "happy2", "happy3"),
+        false);
   }
 
   @Test
   public void testBulkVersionedDelete_happyPathWithNonExisting() throws IOException {
-    runBulkVersionedDeleteTest("testBulkVersionedDelete_happyPathWithNonExisting",
+    runBulkVersionedDeleteTest(
+        "testBulkVersionedDelete_happyPathWithNonExisting",
         List.of("happy4", "happy5", "happy6"),
-        List.of("happy4", "happy5", "happy6", "nonexisting2"), false);
+        List.of("happy4", "happy5", "happy6", "nonexisting2"),
+        false);
   }
 
   @Test
   public void testBulkVersionedDelete_duplicateDeletion() throws IOException {
-    runBulkVersionedDeleteTest("testBulkVersionedDelete_duplicateDeletion",
-        List.of("happy7", "happy8"), List.of("happy7", "happy7", "happy8"), false);
+    runBulkVersionedDeleteTest(
+        "testBulkVersionedDelete_duplicateDeletion",
+        List.of("happy7", "happy8"),
+        List.of("happy7", "happy7", "happy8"),
+        false);
   }
 
   // Note: This tests bulk delete for versioned buckets
-  public void runBulkVersionedDeleteTest(String testName, Collection<String> keysToCreate,
-                                         Collection<String> keysToDelete, boolean wantError)
+  public void runBulkVersionedDeleteTest(
+      String testName,
+      Collection<String> keysToCreate,
+      Collection<String> keysToDelete,
+      boolean wantError)
       throws IOException {
 
     // Create the BucketClient
@@ -1062,17 +1197,21 @@ public abstract class AbstractBlobStoreIT {
             ("Bulk versioned delete blob for " + keyToCreate).getBytes(StandardCharsets.UTF_8);
         try (InputStream inputStream = new ByteArrayInputStream(blobBytes)) {
           UploadRequest request =
-              new UploadRequest.Builder().withKey(keyToCreate).withContentLength(blobBytes.length)
+              new UploadRequest.Builder()
+                  .withKey(keyToCreate)
+                  .withContentLength(blobBytes.length)
                   .build();
           UploadResponse uploadResponse = bucketClient.upload(request, inputStream);
           uploadedKeyVersionMap.put(keyToCreate, uploadResponse.getVersionId());
         } catch (Throwable t) {
-          Assertions.fail(testName + ": The test wasn't supposed to fail while uploading test data",
-              t);
+          Assertions.fail(
+              testName + ": The test wasn't supposed to fail while uploading test data", t);
         }
       }
       // Compile the key/version list of files we uploaded
-      List<BlobIdentifier> objects = keysToDelete.stream().map(
+      List<BlobIdentifier> objects =
+          keysToDelete.stream()
+              .map(
                   keyToDelete ->
                       new BlobIdentifier(
                           keyToDelete, uploadedKeyVersionMap.getOrDefault(keyToDelete, null)))
@@ -1088,8 +1227,8 @@ public abstract class AbstractBlobStoreIT {
       }
 
       // Verify we got the expected error state
-      Assertions.assertEquals(wantError, failed,
-          testName + ": Did not generate expected error state");
+      Assertions.assertEquals(
+          wantError, failed, testName + ": Did not generate expected error state");
       if (failed) {
         return;
       }
@@ -1099,8 +1238,8 @@ public abstract class AbstractBlobStoreIT {
 
         // Try reading the blob (which shouldn't work because it's deleted)
         try (ByteArrayOutputStream outputStream = new ByteArrayOutputStream()) {
-          bucketClient.download(new DownloadRequest.Builder().withKey(keyToDelete).build(),
-              outputStream);
+          bucketClient.download(
+              new DownloadRequest.Builder().withKey(keyToDelete).build(), outputStream);
         } catch (Throwable t) {
           continue;
         }
@@ -1128,8 +1267,12 @@ public abstract class AbstractBlobStoreIT {
       // Try copying from a non-existent source
       boolean copyFailed = false;
       try {
-        CopyRequest copyRequest = CopyRequest.builder().srcKey("blob-that-doesnt-exist")
-            .destBucket(bucketClient.blobStore.getBucket()).destKey(destKey).build();
+        CopyRequest copyRequest =
+            CopyRequest.builder()
+                .srcKey("blob-that-doesnt-exist")
+                .destBucket(bucketClient.blobStore.getBucket())
+                .destKey(destKey)
+                .build();
         bucketClient.copy(copyRequest);
       } catch (Throwable t) {
         copyFailed = true;
@@ -1141,8 +1284,11 @@ public abstract class AbstractBlobStoreIT {
       byte[] blobBytes = "Please copy this data!".getBytes(StandardCharsets.UTF_8);
       try (InputStream inputStream = new ByteArrayInputStream(blobBytes)) {
         UploadRequest request =
-            new UploadRequest.Builder().withKey(key).withContentLength(blobBytes.length)
-                .withMetadata(Map.of("key1", "value1", "key2", "value2")).build();
+            new UploadRequest.Builder()
+                .withKey(key)
+                .withContentLength(blobBytes.length)
+                .withMetadata(Map.of("key1", "value1", "key2", "value2"))
+                .build();
         bucketClient.upload(request, inputStream);
       }
 
@@ -1150,7 +1296,10 @@ public abstract class AbstractBlobStoreIT {
       copyFailed = false;
       try {
         CopyRequest copyRequest =
-            CopyRequest.builder().srcKey(key).destBucket("bucketThatDoesntExist").destKey(destKey)
+            CopyRequest.builder()
+                .srcKey(key)
+                .destBucket("bucketThatDoesntExist")
+                .destKey(destKey)
                 .build();
         bucketClient.copy(copyRequest);
       } catch (Throwable t) {
@@ -1162,8 +1311,11 @@ public abstract class AbstractBlobStoreIT {
       // Do a happy-path copy
       try {
         CopyRequest copyRequest =
-            CopyRequest.builder().srcKey(key).destBucket(bucketClient.blobStore.getBucket())
-                .destKey(destKey).build();
+            CopyRequest.builder()
+                .srcKey(key)
+                .destBucket(bucketClient.blobStore.getBucket())
+                .destKey(destKey)
+                .build();
         CopyResponse copyResponse = bucketClient.copy(copyRequest);
         Assertions.assertEquals(destKey, copyResponse.getKey());
         Assertions.assertNotNull(copyResponse.getLastModified());
@@ -1177,17 +1329,23 @@ public abstract class AbstractBlobStoreIT {
       // Create a blob that we'll overwrite
       byte[] clobberBlobBytes = "Clobber this blob!".getBytes(StandardCharsets.UTF_8);
       try (InputStream inputStream = new ByteArrayInputStream(clobberBlobBytes)) {
-        UploadRequest request = new UploadRequest.Builder().withKey(blobToClobber)
-            .withContentLength(clobberBlobBytes.length)
-            .withMetadata(Map.of("key3", "value3", "key4", "value4")).build();
+        UploadRequest request =
+            new UploadRequest.Builder()
+                .withKey(blobToClobber)
+                .withContentLength(clobberBlobBytes.length)
+                .withMetadata(Map.of("key3", "value3", "key4", "value4"))
+                .build();
         bucketClient.upload(request, inputStream);
       }
 
       // Copy to overwrite that blob
       try {
         CopyRequest copyRequest =
-            CopyRequest.builder().srcKey(key).destBucket(bucketClient.blobStore.getBucket())
-                .destKey(blobToClobber).build();
+            CopyRequest.builder()
+                .srcKey(key)
+                .destBucket(bucketClient.blobStore.getBucket())
+                .destKey(blobToClobber)
+                .build();
         CopyResponse copyResponse = bucketClient.copy(copyRequest);
         Assertions.assertEquals(blobToClobber, copyResponse.getKey());
         Assertions.assertNotNull(copyResponse.getLastModified());
@@ -1235,8 +1393,12 @@ public abstract class AbstractBlobStoreIT {
 
       // Do happy-path copies of both, and verify
       CopyRequest copyRequestV1 =
-          CopyRequest.builder().srcKey(key).srcVersionId(uploadResponseV1.getVersionId())
-              .destBucket(bucketClient.blobStore.getBucket()).destKey(destKeyV1).build();
+          CopyRequest.builder()
+              .srcKey(key)
+              .srcVersionId(uploadResponseV1.getVersionId())
+              .destBucket(bucketClient.blobStore.getBucket())
+              .destKey(destKeyV1)
+              .build();
       CopyResponse copyResponse1 = bucketClient.copy(copyRequestV1);
       Assertions.assertEquals(destKeyV1, copyResponse1.getKey());
       Assertions.assertNotNull(copyResponse1.getVersionId());
@@ -1246,8 +1408,12 @@ public abstract class AbstractBlobStoreIT {
 
       // Try copying the second version
       CopyRequest copyRequestV2 =
-          CopyRequest.builder().srcKey(key).srcVersionId(uploadResponseV2.getVersionId())
-              .destBucket(bucketClient.blobStore.getBucket()).destKey(destKeyV2).build();
+          CopyRequest.builder()
+              .srcKey(key)
+              .srcVersionId(uploadResponseV2.getVersionId())
+              .destBucket(bucketClient.blobStore.getBucket())
+              .destKey(destKeyV2)
+              .build();
       CopyResponse copyResponse2 = bucketClient.copy(copyRequestV2);
       Assertions.assertEquals(destKeyV2, copyResponse2.getKey());
       Assertions.assertNotNull(copyResponse2.getVersionId());
@@ -1257,8 +1423,11 @@ public abstract class AbstractBlobStoreIT {
 
       // Try copying without specifying the version (this should use the latest)
       CopyRequest copyRequestLatest =
-          CopyRequest.builder().srcKey(key).destBucket(bucketClient.blobStore.getBucket())
-              .destKey(destKeyLatest).build();
+          CopyRequest.builder()
+              .srcKey(key)
+              .destBucket(bucketClient.blobStore.getBucket())
+              .destKey(destKeyLatest)
+              .build();
       CopyResponse copyResponse3 = bucketClient.copy(copyRequestLatest);
       Assertions.assertEquals(destKeyLatest, copyResponse3.getKey());
       Assertions.assertNotNull(copyResponse3.getVersionId());
@@ -1271,23 +1440,31 @@ public abstract class AbstractBlobStoreIT {
     }
   }
 
-  private void verifyBlobCopy(BucketClient bucketClient, String originalKey,
-                              String originalVersionId, String destKey) throws IOException {
+  private void verifyBlobCopy(
+      BucketClient bucketClient, String originalKey, String originalVersionId, String destKey)
+      throws IOException {
 
     // Verify the copied contents are the same
     try (ByteArrayOutputStream originalOutputStream = new ByteArrayOutputStream();
-         ByteArrayOutputStream destOutputStream = new ByteArrayOutputStream()) {
+        ByteArrayOutputStream destOutputStream = new ByteArrayOutputStream()) {
 
       bucketClient.download(
-          new DownloadRequest.Builder().withKey(originalKey).withVersionId(originalVersionId)
-              .build(), originalOutputStream);
-      bucketClient.download(new DownloadRequest.Builder().withKey(destKey).build(),
-          destOutputStream);
+          new DownloadRequest.Builder()
+              .withKey(originalKey)
+              .withVersionId(originalVersionId)
+              .build(),
+          originalOutputStream);
+      bucketClient.download(
+          new DownloadRequest.Builder().withKey(destKey).build(), destOutputStream);
 
-      Assertions.assertEquals(originalOutputStream.toByteArray().length,
-          destOutputStream.toByteArray().length, "testCopy: Content-Length did not match");
-      Assertions.assertArrayEquals(originalOutputStream.toByteArray(),
-          destOutputStream.toByteArray(), "testCopy: Bytes arrays did not match");
+      Assertions.assertEquals(
+          originalOutputStream.toByteArray().length,
+          destOutputStream.toByteArray().length,
+          "testCopy: Content-Length did not match");
+      Assertions.assertArrayEquals(
+          originalOutputStream.toByteArray(),
+          destOutputStream.toByteArray(),
+          "testCopy: Bytes arrays did not match");
     }
 
     // Verify the copied metadata is the same
@@ -1297,7 +1474,9 @@ public abstract class AbstractBlobStoreIT {
     BlobMetadata copiedMetadata = bucketClient.getMetadata(destKey, null);
     Assertions.assertNotNull(copiedMetadata);
     Assertions.assertEquals(originalMetadata.getObjectSize(), copiedMetadata.getObjectSize());
-    Assertions.assertEquals(originalMetadata.getMetadata(), copiedMetadata.getMetadata(),
+    Assertions.assertEquals(
+        originalMetadata.getMetadata(),
+        copiedMetadata.getMetadata(),
         "testCopy: The metadata of the copied object does not match the original");
   }
 
@@ -1318,8 +1497,11 @@ public abstract class AbstractBlobStoreIT {
       boolean copyFailed = false;
       try {
         CopyFromRequest copyRequest =
-            CopyFromRequest.builder().srcBucket(bucketClient.blobStore.getBucket())
-                .srcKey("blob-that-doesnt-exist").destKey(destKey).build();
+            CopyFromRequest.builder()
+                .srcBucket(bucketClient.blobStore.getBucket())
+                .srcKey("blob-that-doesnt-exist")
+                .destKey(destKey)
+                .build();
         bucketClient.copyFrom(copyRequest);
       } catch (Throwable t) {
         copyFailed = true;
@@ -1331,8 +1513,11 @@ public abstract class AbstractBlobStoreIT {
       byte[] blobBytes = "Please copy this data!".getBytes(StandardCharsets.UTF_8);
       try (InputStream inputStream = new ByteArrayInputStream(blobBytes)) {
         UploadRequest request =
-            new UploadRequest.Builder().withKey(key).withContentLength(blobBytes.length)
-                .withMetadata(Map.of("key1", "value1", "key2", "value2")).build();
+            new UploadRequest.Builder()
+                .withKey(key)
+                .withContentLength(blobBytes.length)
+                .withMetadata(Map.of("key1", "value1", "key2", "value2"))
+                .build();
         bucketClient.upload(request, inputStream);
       }
 
@@ -1340,8 +1525,11 @@ public abstract class AbstractBlobStoreIT {
       copyFailed = false;
       try {
         CopyFromRequest copyRequest =
-            CopyFromRequest.builder().srcBucket("bucketThatDoesntExist").srcKey(key)
-                .destKey(destKey).build();
+            CopyFromRequest.builder()
+                .srcBucket("bucketThatDoesntExist")
+                .srcKey(key)
+                .destKey(destKey)
+                .build();
         bucketClient.copyFrom(copyRequest);
       } catch (Throwable t) {
         copyFailed = true;
@@ -1352,8 +1540,11 @@ public abstract class AbstractBlobStoreIT {
       // Do a happy-path copyFrom within the same bucket
       try {
         CopyFromRequest copyRequest =
-            CopyFromRequest.builder().srcBucket(bucketClient.blobStore.getBucket()).srcKey(key)
-                .destKey(destKey).build();
+            CopyFromRequest.builder()
+                .srcBucket(bucketClient.blobStore.getBucket())
+                .srcKey(key)
+                .destKey(destKey)
+                .build();
         CopyResponse copyResponse = bucketClient.copyFrom(copyRequest);
         Assertions.assertEquals(destKey, copyResponse.getKey());
         Assertions.assertNotNull(copyResponse.getLastModified());
@@ -1367,17 +1558,23 @@ public abstract class AbstractBlobStoreIT {
       // Create a blob that we'll overwrite
       byte[] clobberBlobBytes = "Clobber this blob!".getBytes(StandardCharsets.UTF_8);
       try (InputStream inputStream = new ByteArrayInputStream(clobberBlobBytes)) {
-        UploadRequest request = new UploadRequest.Builder().withKey(blobToClobber)
-            .withContentLength(clobberBlobBytes.length)
-            .withMetadata(Map.of("key3", "value3", "key4", "value4")).build();
+        UploadRequest request =
+            new UploadRequest.Builder()
+                .withKey(blobToClobber)
+                .withContentLength(clobberBlobBytes.length)
+                .withMetadata(Map.of("key3", "value3", "key4", "value4"))
+                .build();
         bucketClient.upload(request, inputStream);
       }
 
       // CopyFrom to overwrite that blob
       try {
         CopyFromRequest copyRequest =
-            CopyFromRequest.builder().srcBucket(bucketClient.blobStore.getBucket()).srcKey(key)
-                .destKey(blobToClobber).build();
+            CopyFromRequest.builder()
+                .srcBucket(bucketClient.blobStore.getBucket())
+                .srcKey(key)
+                .destKey(blobToClobber)
+                .build();
         CopyResponse copyResponse = bucketClient.copyFrom(copyRequest);
         Assertions.assertEquals(blobToClobber, copyResponse.getKey());
         Assertions.assertNotNull(copyResponse.getLastModified());
@@ -1425,8 +1622,12 @@ public abstract class AbstractBlobStoreIT {
 
       // Copy the first version of the blob
       CopyFromRequest copyRequestV1 =
-          CopyFromRequest.builder().srcBucket(bucketClient.blobStore.getBucket()).srcKey(key)
-              .srcVersionId(uploadResponseV1.getVersionId()).destKey(destKeyV1).build();
+          CopyFromRequest.builder()
+              .srcBucket(bucketClient.blobStore.getBucket())
+              .srcKey(key)
+              .srcVersionId(uploadResponseV1.getVersionId())
+              .destKey(destKeyV1)
+              .build();
       CopyResponse copyResponse1 = bucketClient.copyFrom(copyRequestV1);
       Assertions.assertEquals(destKeyV1, copyResponse1.getKey());
       Assertions.assertNotNull(copyResponse1.getLastModified());
@@ -1437,8 +1638,12 @@ public abstract class AbstractBlobStoreIT {
 
       // Copy the second version of the blob
       CopyFromRequest copyRequestV2 =
-          CopyFromRequest.builder().srcBucket(bucketClient.blobStore.getBucket()).srcKey(key)
-              .srcVersionId(uploadResponseV2.getVersionId()).destKey(destKeyV2).build();
+          CopyFromRequest.builder()
+              .srcBucket(bucketClient.blobStore.getBucket())
+              .srcKey(key)
+              .srcVersionId(uploadResponseV2.getVersionId())
+              .destKey(destKeyV2)
+              .build();
       CopyResponse copyResponse2 = bucketClient.copyFrom(copyRequestV2);
       Assertions.assertEquals(destKeyV2, copyResponse2.getKey());
       Assertions.assertNotNull(copyResponse2.getLastModified());
@@ -1449,8 +1654,11 @@ public abstract class AbstractBlobStoreIT {
 
       // Try copying without specifying the version (this should use the latest)
       CopyFromRequest copyRequestLatest =
-          CopyFromRequest.builder().srcBucket(bucketClient.blobStore.getBucket()).srcKey(key)
-              .destKey(destKeyLatest).build();
+          CopyFromRequest.builder()
+              .srcBucket(bucketClient.blobStore.getBucket())
+              .srcKey(key)
+              .destKey(destKeyLatest)
+              .build();
       CopyResponse copyResponse3 = bucketClient.copyFrom(copyRequestLatest);
       Assertions.assertEquals(destKeyLatest, copyResponse3.getKey());
       Assertions.assertNotNull(copyResponse3.getLastModified());
@@ -1518,17 +1726,19 @@ public abstract class AbstractBlobStoreIT {
       }
 
       // Now verify the delimiter functionality
-      request = new ListBlobsRequest.Builder().withPrefix(prefixKey)
-          .withDelimiter("-") // Filter out every key that has a "-"
-          .build();
+      request =
+          new ListBlobsRequest.Builder()
+              .withPrefix(prefixKey)
+              .withDelimiter("-") // Filter out every key that has a "-"
+              .build();
       iter = bucketClient.list(request);
       Assertions.assertNotNull(iter);
       observedKeys = new HashSet<>();
       while (iter.hasNext()) {
         BlobInfo blobInfo = iter.next();
         observedKeys.add(blobInfo.getKey());
-        Assertions.assertEquals(1, observedKeys.size(),
-            "testList: Did not return expected number of keys");
+        Assertions.assertEquals(
+            1, observedKeys.size(), "testList: Did not return expected number of keys");
         Assertions.assertTrue(observedKeys.contains(prefixKey + "_3"));
       }
     } finally {
@@ -1547,8 +1757,16 @@ public abstract class AbstractBlobStoreIT {
     // Upload multiple blobs to the bucket to test pagination
     String baseKey = "conformance-tests/blob-for-list-page";
     String prefixKey = baseKey + "/prefix";
-    String[] keys = new String[] {baseKey, prefixKey + "-1", prefixKey + "-2", prefixKey + "_3",
-        prefixKey + "-4", prefixKey + "-5", prefixKey + "_6"};
+    String[] keys =
+        new String[] {
+          baseKey,
+          prefixKey + "-1",
+          prefixKey + "-2",
+          prefixKey + "_3",
+          prefixKey + "-4",
+          prefixKey + "-5",
+          prefixKey + "_6"
+        };
     byte[] blobBytes = "Default content for this blob".getBytes(StandardCharsets.UTF_8);
 
     try {
@@ -1570,19 +1788,22 @@ public abstract class AbstractBlobStoreIT {
       Assertions.assertNotNull(firstPage.getBlobs());
 
       // Should have at most 3 items due to maxResults
-      Assertions.assertTrue(firstPage.getBlobs().size() <= 3,
-          "testListPage: First page should have at most 3 items");
+      Assertions.assertTrue(
+          firstPage.getBlobs().size() <= 3, "testListPage: First page should have at most 3 items");
 
       // If we have more than 3 items total, it should be truncated
-      Assertions.assertTrue(firstPage.isTruncated(),
-          "testListPage: Should be truncated when more items exist");
-      Assertions.assertNotNull(firstPage.getNextPageToken(),
-          "testListPage: Should have next page token when truncated");
+      Assertions.assertTrue(
+          firstPage.isTruncated(), "testListPage: Should be truncated when more items exist");
+      Assertions.assertNotNull(
+          firstPage.getNextPageToken(), "testListPage: Should have next page token when truncated");
 
       // Test 2: Continue to next page if available
       ListBlobsPageRequest nextPageRequest =
-          ListBlobsPageRequest.builder().withPrefix(baseKey).withMaxResults(3)
-              .withPaginationToken(firstPage.getNextPageToken()).build();
+          ListBlobsPageRequest.builder()
+              .withPrefix(baseKey)
+              .withMaxResults(3)
+              .withPaginationToken(firstPage.getNextPageToken())
+              .build();
 
       ListBlobsPageResponse secondPage = bucketClient.listPage(nextPageRequest);
       Assertions.assertNotNull(secondPage);
@@ -1597,8 +1818,8 @@ public abstract class AbstractBlobStoreIT {
       // Pages should not overlap
       Set<String> intersection = new HashSet<>(firstPageKeys);
       intersection.retainAll(secondPageKeys);
-      Assertions.assertTrue(intersection.isEmpty(),
-          "testListPage: Pages should not have overlapping keys");
+      Assertions.assertTrue(
+          intersection.isEmpty(), "testListPage: Pages should not have overlapping keys");
 
       // Test 3: Test prefix functionality with pagination
       ListBlobsPageRequest prefixRequest =
@@ -1609,13 +1830,17 @@ public abstract class AbstractBlobStoreIT {
 
       // All returned keys should start with the prefix
       for (BlobInfo blobInfo : prefixPage.getBlobs()) {
-        Assertions.assertTrue(blobInfo.getKey().startsWith(prefixKey),
+        Assertions.assertTrue(
+            blobInfo.getKey().startsWith(prefixKey),
             "testListPage: All keys should start with prefix: " + blobInfo.getKey());
       }
 
       // Test 4: Test delimiter functionality with pagination
       ListBlobsPageRequest delimiterRequest =
-          ListBlobsPageRequest.builder().withPrefix(prefixKey).withDelimiter("-").withMaxResults(2)
+          ListBlobsPageRequest.builder()
+              .withPrefix(prefixKey)
+              .withDelimiter("-")
+              .withMaxResults(2)
               .build();
 
       ListBlobsPageResponse delimiterPage = bucketClient.listPage(delimiterRequest);
@@ -1628,8 +1853,11 @@ public abstract class AbstractBlobStoreIT {
 
       do {
         ListBlobsPageRequest pageRequest =
-            ListBlobsPageRequest.builder().withPrefix(baseKey).withMaxResults(2)
-                .withPaginationToken(nextToken).build();
+            ListBlobsPageRequest.builder()
+                .withPrefix(baseKey)
+                .withMaxResults(2)
+                .withPaginationToken(nextToken)
+                .build();
 
         ListBlobsPageResponse page = bucketClient.listPage(pageRequest);
         Assertions.assertNotNull(page);
@@ -1639,8 +1867,8 @@ public abstract class AbstractBlobStoreIT {
         pageCount++;
 
         // Safety check to prevent infinite loops
-        Assertions.assertTrue(pageCount <= 10,
-            "testListPage: Pagination loop exceeded maximum expected pages");
+        Assertions.assertTrue(
+            pageCount <= 10, "testListPage: Pagination loop exceeded maximum expected pages");
 
       } while (nextToken != null);
 
@@ -1670,7 +1898,9 @@ public abstract class AbstractBlobStoreIT {
       // Upload the blob
       try (InputStream inputStream = new ByteArrayInputStream(blobBytes)) {
         UploadRequest request =
-            new UploadRequest.Builder().withKey(baseKey).withContentLength(blobBytes.length)
+            new UploadRequest.Builder()
+                .withKey(baseKey)
+                .withContentLength(blobBytes.length)
                 .build();
         bucketClient.upload(request, inputStream);
       }
@@ -1685,14 +1915,16 @@ public abstract class AbstractBlobStoreIT {
       ListBlobsPageResponse page = bucketClient.listPage(request);
       Assertions.assertNotNull(page);
       Assertions.assertNotNull(page.getBlobs());
-      Assertions.assertFalse(page.getBlobs().isEmpty(),
-          "testListPage_withTimeStamp: Should return at least one blob");
+      Assertions.assertFalse(
+          page.getBlobs().isEmpty(), "testListPage_withTimeStamp: Should return at least one blob");
 
       // Verify timestamp is present and reasonable
       BlobInfo blobInfo = page.getBlobs().get(0);
-      Assertions.assertNotNull(blobInfo.getLastModified(),
+      Assertions.assertNotNull(
+          blobInfo.getLastModified(),
           "testListPage_withTimeStamp: BlobInfo should have a lastModified timestamp");
-      Assertions.assertFalse(blobInfo.getLastModified().isAfter(maxTimestamp),
+      Assertions.assertFalse(
+          blobInfo.getLastModified().isAfter(maxTimestamp),
           "testListPage_withTimeStamp: lastModified timestamp should not be too far in the future"
               + " (allowing for clock skew)");
       Assertions.assertFalse(
@@ -1716,8 +1948,13 @@ public abstract class AbstractBlobStoreIT {
       final Map<String, String> expectedMetadata;
       final boolean wantError;
 
-      public TestConfig(String testName, String key, byte[] content, Map<String, String> metadata,
-                        Map<String, String> expectedMetadata, boolean wantError) {
+      public TestConfig(
+          String testName,
+          String key,
+          byte[] content,
+          Map<String, String> metadata,
+          Map<String, String> expectedMetadata,
+          boolean wantError) {
         this.testName = testName;
         this.key = key;
         this.content = content;
@@ -1742,8 +1979,14 @@ public abstract class AbstractBlobStoreIT {
         new TestConfig("empty metadata map", key, blobBytes, Map.of(), Map.of(), false));
     testConfigs.add(new TestConfig("null key fails", null, blobBytes, Map.of(), Map.of(), true));
     testConfigs.add(new TestConfig("empty key fails", "", blobBytes, Map.of(), Map.of(), true));
-    testConfigs.add(new TestConfig("populated metadata map", key + testConfigs.size(), blobBytes,
-        Map.of("abc", "foo", "def", "bar"), Map.of("abc", "foo", "def", "bar"), false));
+    testConfigs.add(
+        new TestConfig(
+            "populated metadata map",
+            key + testConfigs.size(),
+            blobBytes,
+            Map.of("abc", "foo", "def", "bar"),
+            Map.of("abc", "foo", "def", "bar"),
+            false));
 
     // Now run the tests
     try {
@@ -1753,14 +1996,19 @@ public abstract class AbstractBlobStoreIT {
         boolean failed = false;
         UploadResponse uploadResponse = null;
         try (InputStream inputStream = new ByteArrayInputStream(testConfig.content)) {
-          UploadRequest request = new UploadRequest.Builder().withKey(testConfig.key)
-              .withContentLength(testConfig.content.length).withMetadata(testConfig.metadata)
-              .build();
+          UploadRequest request =
+              new UploadRequest.Builder()
+                  .withKey(testConfig.key)
+                  .withContentLength(testConfig.content.length)
+                  .withMetadata(testConfig.metadata)
+                  .build();
           uploadResponse = bucketClient.upload(request, inputStream);
         } catch (Throwable t) {
           failed = true;
         }
-        Assertions.assertEquals(testConfig.wantError, failed,
+        Assertions.assertEquals(
+            testConfig.wantError,
+            failed,
             testConfig.testName + ": Did not generate expected error state");
         if (failed) {
           continue;
@@ -1771,9 +2019,13 @@ public abstract class AbstractBlobStoreIT {
 
         // Validate the results
         Assertions.assertNotNull(blobMetadata);
-        Assertions.assertEquals(uploadResponse.getETag(), blobMetadata.getETag(),
+        Assertions.assertEquals(
+            uploadResponse.getETag(),
+            blobMetadata.getETag(),
             testConfig.testName + ": The metadata etag does not match the original");
-        Assertions.assertEquals(testConfig.expectedMetadata, blobMetadata.getMetadata(),
+        Assertions.assertEquals(
+            testConfig.expectedMetadata,
+            blobMetadata.getMetadata(),
             testConfig.testName + ": The metadata does not match the original");
         Assertions.assertNotNull(blobMetadata.getLastModified());
       }
@@ -1799,8 +2051,11 @@ public abstract class AbstractBlobStoreIT {
       UploadResponse uploadResponse1;
       try (InputStream inputStream = new ByteArrayInputStream(blobBytes)) {
         UploadRequest request =
-            new UploadRequest.Builder().withKey(key).withContentLength(blobBytes.length)
-                .withMetadata(metadata1).build();
+            new UploadRequest.Builder()
+                .withKey(key)
+                .withContentLength(blobBytes.length)
+                .withMetadata(metadata1)
+                .build();
         uploadResponse1 = bucketClient.upload(request, inputStream);
       }
 
@@ -1810,8 +2065,11 @@ public abstract class AbstractBlobStoreIT {
       Map<String, String> metadata2 = Map.of("key3", "value3", "key4", "value4");
       try (InputStream inputStream = new ByteArrayInputStream(blobBytes2)) {
         UploadRequest request =
-            new UploadRequest.Builder().withKey(key).withContentLength(blobBytes2.length)
-                .withMetadata(metadata2).build();
+            new UploadRequest.Builder()
+                .withKey(key)
+                .withContentLength(blobBytes2.length)
+                .withMetadata(metadata2)
+                .build();
         uploadResponse2 = bucketClient.upload(request, inputStream);
       }
 
@@ -1878,28 +2136,57 @@ public abstract class AbstractBlobStoreIT {
     final String kmsKeyId;
     final Map<String, String> tags;
 
-    public MultipartUploadTestConfig(String testName, String key, Map<String, String> metadata,
-                                     List<MultipartUploadTestPart> partsToUpload,
-                                     List<MultipartUploadPartResult> partsToComplete,
-                                     boolean abortUpload, boolean wantCompletionError) {
-      this(testName, key, metadata, partsToUpload, partsToComplete, abortUpload,
-          wantCompletionError, null, null);
+    public MultipartUploadTestConfig(
+        String testName,
+        String key,
+        Map<String, String> metadata,
+        List<MultipartUploadTestPart> partsToUpload,
+        List<MultipartUploadPartResult> partsToComplete,
+        boolean abortUpload,
+        boolean wantCompletionError) {
+      this(
+          testName,
+          key,
+          metadata,
+          partsToUpload,
+          partsToComplete,
+          abortUpload,
+          wantCompletionError,
+          null,
+          null);
     }
 
-    public MultipartUploadTestConfig(String testName, String key, Map<String, String> metadata,
-                                     List<MultipartUploadTestPart> partsToUpload,
-                                     List<MultipartUploadPartResult> partsToComplete,
-                                     boolean abortUpload, boolean wantCompletionError,
-                                     String kmsKeyId) {
-      this(testName, key, metadata, partsToUpload, partsToComplete, abortUpload,
-          wantCompletionError, kmsKeyId, null);
+    public MultipartUploadTestConfig(
+        String testName,
+        String key,
+        Map<String, String> metadata,
+        List<MultipartUploadTestPart> partsToUpload,
+        List<MultipartUploadPartResult> partsToComplete,
+        boolean abortUpload,
+        boolean wantCompletionError,
+        String kmsKeyId) {
+      this(
+          testName,
+          key,
+          metadata,
+          partsToUpload,
+          partsToComplete,
+          abortUpload,
+          wantCompletionError,
+          kmsKeyId,
+          null);
     }
 
-    public MultipartUploadTestConfig(String testName, String key, Map<String, String> metadata,
-                                     List<MultipartUploadTestPart> partsToUpload,
-                                     List<MultipartUploadPartResult> partsToComplete,
-                                     boolean abortUpload, boolean wantCompletionError,
-                                     String kmsKeyId, Map<String, String> tags) {
+    public MultipartUploadTestConfig(
+        String testName,
+        String key,
+        Map<String, String> metadata,
+        List<MultipartUploadTestPart> partsToUpload,
+        List<MultipartUploadPartResult> partsToComplete,
+        boolean abortUpload,
+        boolean wantCompletionError,
+        String kmsKeyId,
+        Map<String, String> tags) {
       this.testName = testName;
       this.key = key;
       this.metadata = metadata;
@@ -1923,7 +2210,8 @@ public abstract class AbstractBlobStoreIT {
 
       // Initiate the multipartUpload
       MultipartUploadRequest.Builder requestBuilder =
-          new MultipartUploadRequest.Builder().withKey(testConfig.key)
+          new MultipartUploadRequest.Builder()
+              .withKey(testConfig.key)
               .withMetadata(testConfig.metadata);
       if (testConfig.kmsKeyId != null) {
         requestBuilder.withKmsKeyId(testConfig.kmsKeyId);
@@ -1937,14 +2225,17 @@ public abstract class AbstractBlobStoreIT {
       // Upload the individual parts
       Map<Integer, UploadPartResponse> uploadedParts = new HashMap<>();
       for (MultipartUploadTestPart testPart : testConfig.partsToUpload) {
-        UploadPartResponse partResponse = bucketClient.uploadMultipartPart(mpu,
-            new MultipartPart(testPart.partNumber, testPart.content));
+        UploadPartResponse partResponse =
+            bucketClient.uploadMultipartPart(
+                mpu, new MultipartPart(testPart.partNumber, testPart.content));
         uploadedParts.put(partResponse.getPartNumber(), partResponse);
       }
 
       // List the parts and verify they're all accounted for
       List<UploadPartResponse> partResponses = bucketClient.listMultipartUpload(mpu);
-      Assertions.assertEquals(uploadedParts.size(), partResponses.size(),
+      Assertions.assertEquals(
+          uploadedParts.size(),
+          partResponses.size(),
           testConfig.testName + ": listMultipartUpload() returned unexpected number of parts");
       for (UploadPartResponse partResponse : partResponses) {
         UploadPartResponse partThatWasUploaded = uploadedParts.get(partResponse.getPartNumber());
@@ -1974,8 +2265,9 @@ public abstract class AbstractBlobStoreIT {
         return;
       }
       // Determine what set of parts we'll use when declaring the upload complete
-      Map<Integer, UploadPartResponse> mappingOfUploadPartResponses = partResponses.stream()
-          .collect(Collectors.toMap(UploadPartResponse::getPartNumber, Function.identity()));
+      Map<Integer, UploadPartResponse> mappingOfUploadPartResponses =
+          partResponses.stream()
+              .collect(Collectors.toMap(UploadPartResponse::getPartNumber, Function.identity()));
       List<UploadPartResponse> partResponsesToComplete = new ArrayList<>();
       for (MultipartUploadPartResult partResult : testConfig.partsToComplete) {
         UploadPartResponse foundResult = mappingOfUploadPartResponses.get(partResult.partNumber);
@@ -1995,15 +2287,22 @@ public abstract class AbstractBlobStoreIT {
       try {
         bucketClient.completeMultipartUpload(mpu, partResponsesToComplete);
       } catch (Throwable t) {
-        logger.error("Multipart upload completion failed - Upload ID: {}, Key: {}, Error: {}",
-            mpu.getId(), mpu.getKey(), t.getMessage(), t);
-        Assertions.assertTrue(testConfig.wantCompletionError,
+        logger.error(
+            "Multipart upload completion failed - Upload ID: {}, Key: {}, Error: {}",
+            mpu.getId(),
+            mpu.getKey(),
+            t.getMessage(),
+            t);
+        Assertions.assertTrue(
+            testConfig.wantCompletionError,
             testConfig.testName
                 + ": completeMultipartUpload() produced unexpected error "
                 + t.getMessage());
         completionFailed = true;
       }
-      Assertions.assertEquals(testConfig.wantCompletionError, completionFailed,
+      Assertions.assertEquals(
+          testConfig.wantCompletionError,
+          completionFailed,
           testConfig.testName + ": completeMultipartUpload() did not fail as expected");
       if (completionFailed) {
         return;
@@ -2018,18 +2317,23 @@ public abstract class AbstractBlobStoreIT {
           && testConfig.tags != null
           && !testConfig.tags.isEmpty()) {
         String tagPrefix = "gcp-tag-";
-        actualMetadata = actualMetadata.entrySet().stream()
-            .filter(entry -> !entry.getKey().startsWith(tagPrefix))
-            .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+        actualMetadata =
+            actualMetadata.entrySet().stream()
+                .filter(entry -> !entry.getKey().startsWith(tagPrefix))
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
       }
 
-      Assertions.assertEquals(testConfig.metadata, actualMetadata,
+      Assertions.assertEquals(
+          testConfig.metadata,
+          actualMetadata,
           testConfig.testName + ": Downloaded metadata did not match");
 
       // Verify tags if they were provided
       if (testConfig.tags != null && !testConfig.tags.isEmpty()) {
         Map<String, String> tagResults = bucketClient.getTags(testConfig.key);
-        Assertions.assertEquals(testConfig.tags, tagResults,
+        Assertions.assertEquals(
+            testConfig.tags,
+            tagResults,
             testConfig.testName + ": Tags did not match what was uploaded");
       }
     } finally {
@@ -2044,71 +2348,105 @@ public abstract class AbstractBlobStoreIT {
   }
 
   @Test
-  public void testMultipartUpload_singlePart() {
+  public void testMultipartUpload_singlePart() throws IOException {
     runMultipartUploadTest(
-        new MultipartUploadTestConfig("single part", DEFAULT_MULTIPART_KEY_PREFIX + "singlePart",
-            Map.of("123", "456"), List.of(new MultipartUploadTestPart(1, multipartBytes1)),
-            List.of(new MultipartUploadPartResult(1, true)), false, false));
+        new MultipartUploadTestConfig(
+            "single part",
+            DEFAULT_MULTIPART_KEY_PREFIX + "singlePart",
+            Map.of("123", "456"),
+            List.of(new MultipartUploadTestPart(1, multipartBytes1)),
+            List.of(new MultipartUploadPartResult(1, true)),
+            false,
+            false));
   }
 
   @Test
   public void testMultipartUpload_multipleParts() throws IOException {
-    runMultipartUploadTest(new MultipartUploadTestConfig("multiple parts",
-        DEFAULT_MULTIPART_KEY_PREFIX + "multipleParts", Map.of("234", "456"),
-        List.of(new MultipartUploadTestPart(1, multipartBytes1),
-            new MultipartUploadTestPart(2, multipartBytes2),
-            new MultipartUploadTestPart(3, multipartBytes3),
-            new MultipartUploadTestPart(4, multipartBytes4)),
-        List.of(new MultipartUploadPartResult(1, true), new MultipartUploadPartResult(2, true),
-            new MultipartUploadPartResult(3, true), new MultipartUploadPartResult(4, true)), false,
-        false));
+    runMultipartUploadTest(
+        new MultipartUploadTestConfig(
+            "multiple parts",
+            DEFAULT_MULTIPART_KEY_PREFIX + "multipleParts",
+            Map.of("234", "456"),
+            List.of(
+                new MultipartUploadTestPart(1, multipartBytes1),
+                new MultipartUploadTestPart(2, multipartBytes2),
+                new MultipartUploadTestPart(3, multipartBytes3),
+                new MultipartUploadTestPart(4, multipartBytes4)),
+            List.of(
+                new MultipartUploadPartResult(1, true),
+                new MultipartUploadPartResult(2, true),
+                new MultipartUploadPartResult(3, true),
+                new MultipartUploadPartResult(4, true)),
+            false,
+            false));
   }
 
   @Test
-  public void testMultipartUpload_unorderedMultipleParts() {
-    runMultipartUploadTest(new MultipartUploadTestConfig("unordered multiple parts",
-        DEFAULT_MULTIPART_KEY_PREFIX + "unorderedMultipleParts", Map.of("345", "456"),
-        List.of(new MultipartUploadTestPart(1, multipartBytes1),
-            new MultipartUploadTestPart(2, multipartBytes2)),
-        List.of(new MultipartUploadPartResult(2, true), new MultipartUploadPartResult(1, true)),
-        false, false));
+  public void testMultipartUpload_unorderedMultipleParts() throws IOException {
+    runMultipartUploadTest(
+        new MultipartUploadTestConfig(
+            "unordered multiple parts",
+            DEFAULT_MULTIPART_KEY_PREFIX + "unorderedMultipleParts",
+            Map.of("345", "456"),
+            List.of(
+                new MultipartUploadTestPart(1, multipartBytes1),
+                new MultipartUploadTestPart(2, multipartBytes2)),
+            List.of(new MultipartUploadPartResult(2, true), new MultipartUploadPartResult(1, true)),
+            false,
+            false));
   }
 
   @Test
-  public void testMultipartUpload_skippingNumbers() {
-    runMultipartUploadTest(new MultipartUploadTestConfig("skipping numbers",
-        DEFAULT_MULTIPART_KEY_PREFIX + "skippingNumbers", Map.of("456", "456"),
-        List.of(new MultipartUploadTestPart(2, multipartBytes1),
-            new MultipartUploadTestPart(3, multipartBytes2),
-            new MultipartUploadTestPart(6, multipartBytes3)),
-        List.of(new MultipartUploadPartResult(2, true),
-            new MultipartUploadPartResult(3, true),
-            new MultipartUploadPartResult(6, true)),
-        false, false));
+  public void testMultipartUpload_skippingNumbers() throws IOException {
+    runMultipartUploadTest(
+        new MultipartUploadTestConfig(
+            "skipping numbers",
+            DEFAULT_MULTIPART_KEY_PREFIX + "skippingNumbers",
+            Map.of("456", "456"),
+            List.of(
+                new MultipartUploadTestPart(2, multipartBytes1),
+                new MultipartUploadTestPart(3, multipartBytes2),
+                new MultipartUploadTestPart(6, multipartBytes3)),
+            List.of(
+                new MultipartUploadPartResult(2, true),
+                new MultipartUploadPartResult(3, true),
+                new MultipartUploadPartResult(6, true)),
+            false,
+            false));
   }
 
   @Test
-  public void testMultipartUpload_duplicateParts() {
-    runMultipartUploadTest(new MultipartUploadTestConfig("duplicates parts",
-        DEFAULT_MULTIPART_KEY_PREFIX + "duplicateParts", Map.of("567", "456"),
-        List.of(new MultipartUploadTestPart(2, multipartBytes1),
-            new MultipartUploadTestPart(3, multipartBytes2),
-            new MultipartUploadTestPart(2, multipartBytes3)),
-        List.of(new MultipartUploadPartResult(2, true), new MultipartUploadPartResult(3, true)),
-        false, false));
+  public void testMultipartUpload_duplicateParts() throws IOException {
+    runMultipartUploadTest(
+        new MultipartUploadTestConfig(
+            "duplicates parts",
+            DEFAULT_MULTIPART_KEY_PREFIX + "duplicateParts",
+            Map.of("567", "456"),
+            List.of(
+                new MultipartUploadTestPart(2, multipartBytes1),
+                new MultipartUploadTestPart(3, multipartBytes2),
+                new MultipartUploadTestPart(2, multipartBytes3)),
+            List.of(new MultipartUploadPartResult(2, true), new MultipartUploadPartResult(3, true)),
+            false,
+            false));
   }
 
   @Test
-  public void testMultipartUpload_nonExistentParts() {
-    runMultipartUploadTest(new MultipartUploadTestConfig("non-existent parts",
-        DEFAULT_MULTIPART_KEY_PREFIX + "nonExistentParts", Map.of("678", "456"),
-        List.of(new MultipartUploadTestPart(2, multipartBytes1)),
-        List.of(new MultipartUploadPartResult(2, true), new MultipartUploadPartResult(3, false)),
-        false, true));
+  public void testMultipartUpload_nonExistentParts() throws IOException {
+    runMultipartUploadTest(
+        new MultipartUploadTestConfig(
+            "non-existent parts",
+            DEFAULT_MULTIPART_KEY_PREFIX + "nonExistentParts",
+            Map.of("678", "456"),
+            List.of(new MultipartUploadTestPart(2, multipartBytes1)),
+            List.of(
+                new MultipartUploadPartResult(2, true), new MultipartUploadPartResult(3, false)),
+            false,
+            true));
   }
 
   @Test
-  public void testMultipartUpload_badETag() {
+  public void testMultipartUpload_badETag() throws IOException {
     runMultipartUploadTest(
         new MultipartUploadTestConfig(
             "bad etag",
@@ -2132,8 +2470,12 @@ public abstract class AbstractBlobStoreIT {
     BucketClient bucketClient = new BucketClient(blobStore);
 
     // Call each operation with an invalid MPU
-    MultipartUpload invalidMPU = MultipartUpload.builder().bucket("fakeBucket")
-        .key(DEFAULT_MULTIPART_KEY_PREFIX + "invalidKey").id("invalidUploadId").build();
+    MultipartUpload invalidMPU =
+        MultipartUpload.builder()
+            .bucket("fakeBucket")
+            .key(DEFAULT_MULTIPART_KEY_PREFIX + "invalidKey")
+            .id("invalidUploadId")
+            .build();
 
     boolean multipartUploadFailed = false;
     try {
@@ -2234,7 +2576,8 @@ public abstract class AbstractBlobStoreIT {
       } catch (Throwable t) {
         multipartUploadFailed = true;
       }
-      Assertions.assertTrue(multipartUploadFailed,
+      Assertions.assertTrue(
+          multipartUploadFailed,
           "Attempting to complete an aborted multipartUpload should have failed");
     } finally {
       safeDeleteBlobs(bucketClient, key);
@@ -2251,12 +2594,18 @@ public abstract class AbstractBlobStoreIT {
     String kmsKeyId = harness.getKmsKeyId();
     Assumptions.assumeTrue(kmsKeyId != null && !kmsKeyId.isEmpty(), "KMS key ID not configured");
 
-    runMultipartUploadTest(new MultipartUploadTestConfig("multipart with KMS",
-        DEFAULT_MULTIPART_KEY_PREFIX + "withKms", Map.of("encryption", "kms"),
-        List.of(new MultipartUploadTestPart(1, multipartBytes1),
-            new MultipartUploadTestPart(2, multipartBytes2)),
-        List.of(new MultipartUploadPartResult(1, true), new MultipartUploadPartResult(2, true)),
-        false, false, kmsKeyId));
+    runMultipartUploadTest(
+        new MultipartUploadTestConfig(
+            "multipart with KMS",
+            DEFAULT_MULTIPART_KEY_PREFIX + "withKms",
+            Map.of("encryption", "kms"),
+            List.of(
+                new MultipartUploadTestPart(1, multipartBytes1),
+                new MultipartUploadTestPart(2, multipartBytes2)),
+            List.of(new MultipartUploadPartResult(1, true), new MultipartUploadPartResult(2, true)),
+            false,
+            false,
+            kmsKeyId));
   }
 
   // @Test
@@ -2264,8 +2613,12 @@ public abstract class AbstractBlobStoreIT {
     String expectedKey = DEFAULT_MULTIPART_KEY_PREFIX + "withTags";
     Map<String, String> tags = Map.of("tag1", "value1");
     runMultipartUploadTest(
-        new MultipartUploadTestConfig("multipart with tags", expectedKey, Map.of("key1", "value1"),
-            List.of(new MultipartUploadTestPart(1, multipartBytes1),
+        new MultipartUploadTestConfig(
+            "multipart with tags",
+            expectedKey,
+            Map.of("key1", "value1"),
+            List.of(
+                new MultipartUploadTestPart(1, multipartBytes1),
                 new MultipartUploadTestPart(2, multipartBytes2)),
             List.of(new MultipartUploadPartResult(1, true), new MultipartUploadPartResult(2, true)),
             false, false, null, tags));
@@ -2347,22 +2700,25 @@ public abstract class AbstractBlobStoreIT {
       // Upload the file with the tags
       try (InputStream inputStream = new ByteArrayInputStream(utf8BlobBytes)) {
         UploadRequest request =
-            new UploadRequest.Builder().withKey(key).withContentLength(utf8BlobBytes.length)
-                .withTags(tags).build();
+            new UploadRequest.Builder()
+                .withKey(key)
+                .withContentLength(utf8BlobBytes.length)
+                .withTags(tags)
+                .build();
         bucketClient.upload(request, inputStream);
       }
 
       // Verify the tags are applied to the file
       Map<String, String> tagResults = bucketClient.getTags(key);
-      Assertions.assertEquals(tags, tagResults,
-          "testTagging: Tags did not match what was uploaded");
+      Assertions.assertEquals(
+          tags, tagResults, "testTagging: Tags did not match what was uploaded");
 
       // Try overwriting the tags
       Map<String, String> tags2 = Map.of("tag3", "value3");
       bucketClient.setTags(key, tags2);
       tagResults = bucketClient.getTags(key);
-      Assertions.assertEquals(tags2, tagResults,
-          "testTagging: Tags did not match what was overwriting");
+      Assertions.assertEquals(
+          tags2, tagResults, "testTagging: Tags did not match what was overwriting");
 
       // Try writing tags to a blob that doesn't exist
       boolean failed = false;
@@ -2418,21 +2774,24 @@ public abstract class AbstractBlobStoreIT {
   @Test
   public void testGeneratePresignedUploadUrl_negativeDuration() {
     String key = PRESIGNED_BLOB_UPLOAD_PREFIX + "negativeDuration";
-    Assertions.assertThrows(InvalidArgumentException.class,
+    Assertions.assertThrows(
+        InvalidArgumentException.class,
         () -> runPresignedUploadTest(key, Duration.ofHours(-10), null, null, null, null, null));
   }
 
   @Test
   public void testGeneratePresignedUploadUrl_zeroDuration() {
     String key = PRESIGNED_BLOB_UPLOAD_PREFIX + "zeroDuration";
-    Assertions.assertThrows(InvalidArgumentException.class,
+    Assertions.assertThrows(
+        InvalidArgumentException.class,
         () -> runPresignedUploadTest(key, Duration.ofHours(0), null, null, null, null, null));
   }
 
   @Test
   public void testGeneratePresignedUploadUrl_expiredUrl() {
     String key = PRESIGNED_BLOB_UPLOAD_PREFIX + "expiredUrl";
-    Assertions.assertThrows(Exception.class,
+    Assertions.assertThrows(
+        Exception.class,
         () -> runPresignedUploadTest(key, Duration.ofSeconds(1), 2L, null, null, null, null));
   }
 
@@ -2442,7 +2801,8 @@ public abstract class AbstractBlobStoreIT {
   public void testGeneratePresignedUploadUrl_missingMetadataOnUpload() {
     String key = PRESIGNED_BLOB_UPLOAD_PREFIX + "missingMetadataOnUpload";
     Map<String, String> metadata = Map.of("key5", "value5", "key6", "value6");
-    Assertions.assertThrows(Exception.class,
+    Assertions.assertThrows(
+        Exception.class,
         () -> runPresignedUploadTest(key, Duration.ofHours(10), null, metadata, null, null, null));
   }
 
@@ -2453,7 +2813,8 @@ public abstract class AbstractBlobStoreIT {
     String key = PRESIGNED_BLOB_UPLOAD_PREFIX + "missingTagsOnUpload";
     Map<String, String> tags = Map.of("tag5", "tagValue5", "tag6", "tagValue6");
     // TODO: narrow it down to the exact exception
-    Assertions.assertThrows(Throwable.class,
+    Assertions.assertThrows(
+        Throwable.class,
         () -> runPresignedUploadTest(key, Duration.ofHours(10), null, null, null, tags, null));
   }
 
@@ -2463,7 +2824,8 @@ public abstract class AbstractBlobStoreIT {
   public void testGeneratePresignedUploadUrl_missingMetadataOnUrlGeneration() {
     String key = PRESIGNED_BLOB_UPLOAD_PREFIX + "missingMetadataOnUrlGeneration";
     Map<String, String> metadata = Map.of("key7", "value7", "key8", "value8");
-    Assertions.assertThrows(Exception.class,
+    Assertions.assertThrows(
+        Exception.class,
         () -> runPresignedUploadTest(key, Duration.ofHours(10), null, null, metadata, null, null));
   }
 
@@ -2473,15 +2835,20 @@ public abstract class AbstractBlobStoreIT {
   public void testGeneratePresignedUploadUrl_missingTagsOnUrlGeneration() {
     String key = PRESIGNED_BLOB_UPLOAD_PREFIX + "missingTagsOnUrlGeneration";
     Map<String, String> tags = Map.of("tag7", "tagValue7", "tag8", "tagValue8");
-    Assertions.assertThrows(Exception.class,
+    Assertions.assertThrows(
+        Exception.class,
         () -> runPresignedUploadTest(key, Duration.ofHours(10), null, null, null, null, tags));
   }
 
-  private void runPresignedUploadTest(String key, Duration duration, Long delayInSeconds,
-                                      Map<String, String> metadataForUrlGeneration,
-                                      Map<String, String> metadataForUpload,
-                                      Map<String, String> tagsForUrlGeneration,
-                                      Map<String, String> tagsForUpload) throws IOException {
+  private void runPresignedUploadTest(
+      String key,
+      Duration duration,
+      Long delayInSeconds,
+      Map<String, String> metadataForUrlGeneration,
+      Map<String, String> metadataForUpload,
+      Map<String, String> tagsForUrlGeneration,
+      Map<String, String> tagsForUpload)
+      throws IOException {
 
     AbstractBlobStore blobStore = harness.createBlobStore(true, true, false);
     BucketClient bucketClient = new BucketClient(blobStore);
@@ -2489,8 +2856,13 @@ public abstract class AbstractBlobStoreIT {
     byte[] utf8BlobBytes = blobData.getBytes(StandardCharsets.UTF_8);
     try {
       PresignedUrlRequest presignedUrlRequest =
-          PresignedUrlRequest.builder().type(PresignedOperation.UPLOAD).key(key).duration(duration)
-              .metadata(metadataForUrlGeneration).tags(tagsForUrlGeneration).build();
+          PresignedUrlRequest.builder()
+              .type(PresignedOperation.UPLOAD)
+              .key(key)
+              .duration(duration)
+              .metadata(metadataForUrlGeneration)
+              .tags(tagsForUrlGeneration)
+              .build();
 
       // Generate a presigned URL
       URL presignedUrl = bucketClient.generatePresignedUrl(presignedUrlRequest);
@@ -2505,8 +2877,8 @@ public abstract class AbstractBlobStoreIT {
       }
 
       // Upload the file using the presigned URL
-      useHttpUrlConnectionToPut(harness, presignedUrl, utf8BlobBytes, metadataForUpload,
-          tagsForUpload);
+      useHttpUrlConnectionToPut(
+          harness, presignedUrl, utf8BlobBytes, metadataForUpload, tagsForUpload);
 
       // Now read the file to ensure it was uploaded properly
       try (ByteArrayOutputStream outputStream = new ByteArrayOutputStream()) {
@@ -2522,8 +2894,8 @@ public abstract class AbstractBlobStoreIT {
             metadataForUrlGeneration == null ? new HashMap<>() : metadataForUrlGeneration;
         Assertions.assertEquals(key, downloadResponse.getKey());
         Assertions.assertEquals(key, downloadResponse.getMetadata().getKey());
-        Assertions.assertEquals(utf8BlobBytes.length,
-            downloadResponse.getMetadata().getObjectSize());
+        Assertions.assertEquals(
+            utf8BlobBytes.length, downloadResponse.getMetadata().getObjectSize());
         Assertions.assertEquals(
             metadataForUrlGeneration, downloadResponse.getMetadata().getMetadata());
         Assertions.assertNotNull(downloadResponse.getMetadata().getETag());
@@ -2554,33 +2926,35 @@ public abstract class AbstractBlobStoreIT {
   @Test
   void testGeneratePresignedDownloadUrl_nonExistingFile() throws IOException {
     String key = PRESIGNED_BLOB_DOWNLOAD_PREFIX + "nonExistingFile";
-    Assertions.assertThrows(Throwable.class,
-        () -> runPresignedDownloadTest(key, false, Duration.ofHours(4), null));
+    Assertions.assertThrows(
+        Throwable.class, () -> runPresignedDownloadTest(key, false, Duration.ofHours(4), null));
   }
 
   @Test
   void testGeneratePresignedDownloadUrl_negativeDuration() throws IOException {
     String key = PRESIGNED_BLOB_DOWNLOAD_PREFIX + "negativeDuration";
-    Assertions.assertThrows(InvalidArgumentException.class,
+    Assertions.assertThrows(
+        InvalidArgumentException.class,
         () -> runPresignedDownloadTest(key, true, Duration.ofHours(-6), null));
   }
 
   @Test
   void testGeneratePresignedDownloadUrl_zeroDuration() throws IOException {
     String key = PRESIGNED_BLOB_DOWNLOAD_PREFIX + "zeroDuration";
-    Assertions.assertThrows(InvalidArgumentException.class,
+    Assertions.assertThrows(
+        InvalidArgumentException.class,
         () -> runPresignedDownloadTest(key, true, Duration.ofHours(0), null));
   }
 
   @Test
   void testGeneratePresignedDownloadUrl_expiredUrl() throws IOException {
     String key = PRESIGNED_BLOB_DOWNLOAD_PREFIX + "expiredUrl";
-    Assertions.assertThrows(Exception.class,
-        () -> runPresignedDownloadTest(key, false, Duration.ofSeconds(1), 2L));
+    Assertions.assertThrows(
+        Exception.class, () -> runPresignedDownloadTest(key, false, Duration.ofSeconds(1), 2L));
   }
 
-  private void runPresignedDownloadTest(String key, boolean uploadFile, Duration duration,
-                                        Long delayInSeconds) throws IOException {
+  private void runPresignedDownloadTest(
+      String key, boolean uploadFile, Duration duration, Long delayInSeconds) throws IOException {
 
     AbstractBlobStore blobStore = harness.createBlobStore(true, true, false);
     BucketClient bucketClient = new BucketClient(blobStore);
@@ -2593,14 +2967,20 @@ public abstract class AbstractBlobStoreIT {
       if (uploadFile) {
         try (InputStream baos = new ByteArrayInputStream(utf8BlobBytes)) {
           bucketClient.upload(
-              new UploadRequest.Builder().withKey(key).withContentLength(utf8BlobBytes.length)
-                  .build(), baos);
+              new UploadRequest.Builder()
+                  .withKey(key)
+                  .withContentLength(utf8BlobBytes.length)
+                  .build(),
+              baos);
         }
       }
 
       PresignedUrlRequest presignedUrlRequest =
-          PresignedUrlRequest.builder().type(PresignedOperation.DOWNLOAD).key(key)
-              .duration(duration).build();
+          PresignedUrlRequest.builder()
+              .type(PresignedOperation.DOWNLOAD)
+              .key(key)
+              .duration(duration)
+              .build();
 
       // Generate a presigned URL
       URL presignedUrl = bucketClient.generatePresignedUrl(presignedUrlRequest);
@@ -2647,7 +3027,7 @@ public abstract class AbstractBlobStoreIT {
     UploadResponse uploadResponse2;
 
     try (InputStream inputStream1 = new ByteArrayInputStream(blobBytes1);
-         InputStream inputStream2 = new ByteArrayInputStream(blobBytes2)) {
+        InputStream inputStream2 = new ByteArrayInputStream(blobBytes2)) {
       UploadRequest request1 =
           new UploadRequest.Builder().withKey(key).withContentLength(blobBytes1.length).build();
       uploadResponse1 = bucketClient.upload(request1, inputStream1);
@@ -2656,10 +3036,12 @@ public abstract class AbstractBlobStoreIT {
       uploadResponse2 = bucketClient.upload(request2, inputStream2);
 
       // Check if the objects exist
-      Assertions.assertTrue(bucketClient.doesObjectExist(key,
-          useVersionedBucket ? uploadResponse1.getVersionId() : null)); // Get 1st version
-      Assertions.assertTrue(bucketClient.doesObjectExist(key,
-          useVersionedBucket ? uploadResponse2.getVersionId() : null)); // Get 2nd version
+      Assertions.assertTrue(
+          bucketClient.doesObjectExist(
+              key, useVersionedBucket ? uploadResponse1.getVersionId() : null)); // Get 1st version
+      Assertions.assertTrue(
+          bucketClient.doesObjectExist(
+              key, useVersionedBucket ? uploadResponse2.getVersionId() : null)); // Get 2nd version
       Assertions.assertTrue(bucketClient.doesObjectExist(key, null)); // Get latest version
 
       // Check something that doesn't exist
@@ -2686,8 +3068,12 @@ public abstract class AbstractBlobStoreIT {
   }
 
   /** Helper function for uploading to a presignedUrl */
-  void useHttpUrlConnectionToPut(Harness harness, URL presignedUrl, byte[] blobBytes,
-                                 Map<String, String> metadata, Map<String, String> tags)
+  void useHttpUrlConnectionToPut(
+      Harness harness,
+      URL presignedUrl,
+      byte[] blobBytes,
+      Map<String, String> metadata,
+      Map<String, String> tags)
       throws IOException {
     HttpURLConnection connection = (HttpURLConnection) presignedUrl.openConnection();
     connection.setDoOutput(true);
@@ -2706,7 +3092,7 @@ public abstract class AbstractBlobStoreIT {
     connection.setRequestMethod("PUT");
 
     try (InputStream inputStream = new ByteArrayInputStream(blobBytes);
-         OutputStream out = connection.getOutputStream()) {
+        OutputStream out = connection.getOutputStream()) {
       byte[] buffer = new byte[1024];
       int bytesRead;
       while ((bytesRead = inputStream.read(buffer)) != -1) {
@@ -2796,8 +3182,11 @@ public abstract class AbstractBlobStoreIT {
       UploadResponse uploadResponse;
       try (InputStream inputStream = new ByteArrayInputStream(content)) {
         UploadRequest request =
-            new UploadRequest.Builder().withKey(key).withContentLength(content.length)
-                .withKmsKeyId(kmsKeyId).build();
+            new UploadRequest.Builder()
+                .withKey(key)
+                .withContentLength(content.length)
+                .withKmsKeyId(kmsKeyId)
+                .build();
         uploadResponse = bucketClient.upload(request, inputStream);
       }
 
@@ -2809,10 +3198,12 @@ public abstract class AbstractBlobStoreIT {
         DownloadRequest downloadRequest = new DownloadRequest.Builder().withKey(key).build();
         bucketClient.download(downloadRequest, outputStream);
 
-        Assertions.assertEquals(content.length, outputStream.toByteArray().length,
+        Assertions.assertEquals(
+            content.length,
+            outputStream.toByteArray().length,
             "testUploadWithKmsKey: Content length mismatch");
-        Assertions.assertArrayEquals(content, outputStream.toByteArray(),
-            "testUploadWithKmsKey: Content mismatch");
+        Assertions.assertArrayEquals(
+            content, outputStream.toByteArray(), "testUploadWithKmsKey: Content mismatch");
       }
     } catch (Exception e) {
       Assertions.fail("testUploadWithKmsKey: Test failed with exception: " + e.getMessage());
@@ -2833,8 +3224,11 @@ public abstract class AbstractBlobStoreIT {
       // Upload with KMS key
       try (InputStream inputStream = new ByteArrayInputStream(content)) {
         UploadRequest request =
-            new UploadRequest.Builder().withKey(key).withContentLength(content.length)
-                .withKmsKeyId(kmsKeyId).build();
+            new UploadRequest.Builder()
+                .withKey(key)
+                .withContentLength(content.length)
+                .withKmsKeyId(kmsKeyId)
+                .build();
         bucketClient.upload(request, inputStream);
       }
 
@@ -2844,10 +3238,12 @@ public abstract class AbstractBlobStoreIT {
         bucketClient.download(downloadRequest, outputStream);
         byte[] downloadedContent = outputStream.toByteArray();
 
-        Assertions.assertEquals(content.length, downloadedContent.length,
+        Assertions.assertEquals(
+            content.length,
+            downloadedContent.length,
             "testDownloadWithKmsKey: Content length mismatch");
-        Assertions.assertArrayEquals(content, downloadedContent,
-            "testDownloadWithKmsKey: Content mismatch");
+        Assertions.assertArrayEquals(
+            content, downloadedContent, "testDownloadWithKmsKey: Content mismatch");
       }
     } finally {
       safeDeleteBlobs(bucketClient, key);
@@ -2870,8 +3266,11 @@ public abstract class AbstractBlobStoreIT {
 
     try (InputStream inputStream = new ByteArrayInputStream(blobBytes)) {
       UploadRequest request =
-          new UploadRequest.Builder().withKey(key).withContentLength(blobBytes.length)
-              .withKmsKeyId(kmsKeyId).build();
+          new UploadRequest.Builder()
+              .withKey(key)
+              .withContentLength(blobBytes.length)
+              .withKmsKeyId(kmsKeyId)
+              .build();
       bucketClient.upload(request, inputStream);
     }
 
@@ -2926,8 +3325,8 @@ public abstract class AbstractBlobStoreIT {
     runPresignedUrlWithKmsKeyTest(key, null, metadata, content);
   }
 
-  private void runPresignedUrlWithKmsKeyTest(String key, String kmsKeyId,
-                                             Map<String, String> metadata, byte[] content)
+  private void runPresignedUrlWithKmsKeyTest(
+      String key, String kmsKeyId, Map<String, String> metadata, byte[] content)
       throws IOException {
     AbstractBlobStore blobStore = harness.createBlobStore(true, true, false);
     BucketClient bucketClient = new BucketClient(blobStore);
@@ -2935,8 +3334,13 @@ public abstract class AbstractBlobStoreIT {
     try {
       // Generate presigned URL with KMS key
       PresignedUrlRequest presignedUrlRequest =
-          PresignedUrlRequest.builder().type(PresignedOperation.UPLOAD).key(key)
-              .duration(Duration.ofHours(1)).metadata(metadata).kmsKeyId(kmsKeyId).build();
+          PresignedUrlRequest.builder()
+              .type(PresignedOperation.UPLOAD)
+              .key(key)
+              .duration(Duration.ofHours(1))
+              .metadata(metadata)
+              .kmsKeyId(kmsKeyId)
+              .build();
 
       URL presignedUrl = bucketClient.generatePresignedUrl(presignedUrlRequest);
       Assertions.assertNotNull(presignedUrl);
@@ -2957,8 +3361,11 @@ public abstract class AbstractBlobStoreIT {
       String checksum = harness.computeChecksum(content);
 
       UploadRequest uploadRequest =
-          UploadRequest.builder().withKey(key).withContentLength(content.length)
-              .withChecksumValue(checksum).build();
+          UploadRequest.builder()
+              .withKey(key)
+              .withContentLength(content.length)
+              .withChecksumValue(checksum)
+              .build();
 
       InputStream inputStream = new ByteArrayInputStream(content);
       UploadResponse uploadResponse = bucketClient.upload(uploadRequest, inputStream);
@@ -2994,8 +3401,11 @@ public abstract class AbstractBlobStoreIT {
       String checksum = harness.computeChecksum(content);
 
       UploadRequest uploadRequest =
-          UploadRequest.builder().withKey(key).withContentLength(content.length)
-              .withChecksumValue(checksum).build();
+          UploadRequest.builder()
+              .withKey(key)
+              .withContentLength(content.length)
+              .withChecksumValue(checksum)
+              .build();
 
       UploadResponse uploadResponse = bucketClient.upload(uploadRequest, tempFile.toFile());
 
